"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

gtk/text.c: fix callback that was eating a word.
Nicolas Weeger 2007-05-03

Implement feature request #1560389: improve inscription logic.
 gtk/gx11.c inventory.c
 common/client.c client.h commands.c item.c item.h proto.h
Nicolas Weeger 2007-04-23

Fix memory overrun errors.
---
gtk-v2/src/stats.c: Allocate enough skill boxes to store MAX_SKILL skills.
Andreas Kirschbaum 2007-04-23

autogen.sh: Add script to rebuild autoconf files.
configure, aclocal.m4, */Makefile.in: Rebuilt.
common/Makefile.am: Rewrite commands to build svnversion.h to not generate an
   error message the first time they are run.
configure.in: Remove duplicate use of AC_CONFIG_SRCDIR.
configure.in: Add template comments to AC_DEFINEs. Now autoheader and
   ./configure --enable-maintainer-mode does work again.
---
Andreas Kirschbaum 2007-04-16

Use #include <config.h> instead #include "config.h" to support multiple
configurations outside the source directory.
---
Andreas Kirschbaum 2007-04-16

Rename DATADIR to CF_DATADIR to avoid name clashes when cross-compiling to
Win32.
---
gtk/win32/config.h, configure.in, common/image.c, common/config.h.in,
gnome/gnome.c, gnome/gnome-sound.c: Replace DATADIR by CF_DATADIR.
Andreas Kirschbaum 2007-04-16

Changes for 1.10.0:
------------------------------------------------------------------------------
gtk-v2/src/info.c: For extended message handling, special case the
    MSG_TYPE_SIGN - the 1.x server puts a number in front of the message to
    denote it is auto apply - strip it off in the gtk2 client.  Not an
    issue as far as 2.x goes, as the server doesn't prefix the message
    anymore.
MSW 2007-02-11

gtk-v2/gtk-v2.glade: Apply patch 1636013 - standardize on underscored
   widget names.  Patch by Veli-Matti Valtonen - maligor.
MSW 2007-02-06

Fix for bug #1538948: Assertion failure for map2 command.